[package]
name = "win-logs-json"
version = "0.1.0"
authors = ["Usairim Isani", "aunps@pm.me"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"

evtx = { git = "https://github.com/UsairimIsani/evtx" }
win-event-log = { git = "https://github.com/UsairimIsani/win-event-log-rs" }